--- a/apex-landing/manifest.json
+++ b/apex-landing/manifest.json
@@ -1,55 +1,54 @@
 {
-    "dir": "ltr",
-    "lang": "English",
-    "name": "LFCarry",
-    "scope": "/apex-landing/",
-    "display": "fulscreen",
-    "start_url": "https://graf-andreev.github.io/apex-landing/",
-    "short_name": "PwP",
-    "theme_color": "#B12A34",
-    "background_color": "#B12A34",
-    "description": "Progressive Web App",
-    "orientation": "any",
-    "related_applications": [],
-    "prefer_related_applications": false,
-    "icons": [
-        {
-         "src": "\/android-icon-36x36.png",
-         "sizes": "36x36",
-         "type": "image\/png",
-         "density": "0.75"
-        },
-        {
-         "src": "\/android-icon-48x48.png",
-         "sizes": "48x48",
-         "type": "image\/png",
-         "density": "1.0"
-        },
-        {
-         "src": "\/android-icon-72x72.png",
-         "sizes": "72x72",
-         "type": "image\/png",
-         "density": "1.5"
-        },
-        {
-         "src": "\/android-icon-96x96.png",
-         "sizes": "96x96",
-         "type": "image\/png",
-         "density": "2.0"
-        },
-        {
-         "src": "\/android-icon-144x144.png",
-         "sizes": "144x144",
-         "type": "image\/png",
-         "density": "3.0"
-        },
-        {
-         "src": "\/android-icon-192x192.png",
-         "sizes": "192x192",
-         "type": "image\/png",
-         "density": "4.0"
-        }
-       ],
-    "url": "https://graf-andreev.github.io/apex-landing/",
-    "screenshots": []
+  "name": "LFCarry",
+    "short_name": "LFCarry",
+    "description": "<3",
+    "lang": "en-GB",
+    "start_url": "/",
+    "display": "standalone",
+    "theme_color": "#E6E6FA",
+    "background_color": "#E6E6FA",
+
+ "icons": [
+   {
+     "src":"\/icons/wcls-logo-512.png",
+     "sizes": "512x512",
+     "type": "image\/png"
+   },
+  {
+   "src": "\/icons/android-icon-36x36.png",
+   "sizes": "36x36",
+   "type": "image\/png",
+   "density": "0.75"
+  },
+  {
+   "src": "\/icons/android-icon-48x48.png",
+   "sizes": "48x48",
+   "type": "image\/png",
+   "density": "1.0"
+  },
+  {
+   "src": "\/icons/android-icon-72x72.png",
+   "sizes": "72x72",
+   "type": "image\/png",
+   "density": "1.5"
+  },
+  {
+   "src": "\/icons/android-icon-96x96.png",
+   "sizes": "96x96",
+   "type": "image\/png",
+   "density": "2.0"
+  },
+  {
+   "src": "\/icons/android-icon-144x144.png",
+   "sizes": "144x144",
+   "type": "image\/png",
+   "density": "3.0"
+  },
+  {
+   "src": "\/icons/android-icon-192x192.png",
+   "sizes": "192x192",
+   "type": "image\/png",
+   "density": "4.0"
+  }
+ ]
 }
