--- a/apex-landing/manifest.json
+++ b/apex-landing/manifest.json
@@ -3,7 +3,7 @@
     "short_name": "LFCarry",
     "description": "<3",
     "lang": "en-GB",
-    "start_url": "/",
+    "start_url": "/apex-landing",
     "display": "standalone",
     "theme_color": "#E6E6FA",
     "background_color": "#E6E6FA",
