--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "Play with Pro",
-    "short_name": "PwP",
-    "description": "Play with Pro service",
+  "name": "Web Community Leaders UK IE",
+    "short_name": "Web Leaders",
+    "description": "Web Community Leaders landing page",
     "lang": "en-GB",
     "start_url": "/",
     "display": "standalone",
