--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "LFCarry",
-    "short_name": "LFC",
+    "short_name": "LFCarry",
     "description": "LFCarry PWA app",
     "lang": "en-GB",
     "start_url": "/",
